# holo-communities-dna

./: .gitignore  .hcignore  .travis.yml  Cargo.toml  HcScJY7gJUHUzjrmjykzJth5NS9xwygzpSoJUBqY5Q5to44b9x7qShOPa7Zrh6r  HcSciIJiNJF89yphrkfnAoAsgoj4qrj8ubzzKKNOudfvdsuunwZwdz4eqfwjtjr  Makefile  README.md  agent1.keystore  agent2.keystore  agent3.keystore  conductor-config-agent1.toml  conductor-config-agent2.toml  conductor-config-agent3.toml  conductor-config.toml  config.nix  container-config.toml  default.nix  docker-compose.yml  example-conductor-config.toml  manifest.json  package.json  philip_beadle.keystore  pkgs.nix  postsSpecification.md  schema.graphql  shell.nix
.circleci/: config.yml
common/hdk-helpers/: Cargo.toml
common/hdk-helpers/src/: lib.rs
conductor-configs/: conductor-config-agent1.toml  conductor-config-agent2.toml  conductor-config-agent3.toml  example-conductor-config.toml
dna-src/: manifest.json
dna-src/test/: config.js  index.js  package-lock.json  package.json  queries.js
dna-src/test/agent/: comments.js  communities.js  community.js  gql_comments.js  gql_communities.js  gql_communitys.js  gql_messages.js  gql_posts.js  gql_threads.js  messages.js  people.js  posts.js  register.js  threads.js
dna-src/test/scenarios/: retrieve_agents_people_query.js
dna-src/zomes/chat/code/: Cargo.toml
dna-src/zomes/chat/code/src/: lib.rs
dna-src/zomes/chat/code/src/message/: mod.rs
dna-src/zomes/chat/code/src/thread/: mod.rs
dna-src/zomes/comments/code/: .hcbuild  Cargo.toml
dna-src/zomes/comments/code/src/: base_entry.rs  comment_entry.rs  lib.rs
dna-src/zomes/comments/code/src/comments/: mod.rs
dna-src/zomes/communities/: zome.json
dna-src/zomes/communities/code/: .hcbuild  Cargo.toml
dna-src/zomes/communities/code/src/: lib.rs
dna-src/zomes/communities/code/src/communities/: mod.rs
dna-src/zomes/community/code/: .hcbuild  Cargo.toml
dna-src/zomes/community/code/src/: lib.rs
dna-src/zomes/community/code/src/community/: mod.rs
dna-src/zomes/graphql/code/: .hcbuild  Cargo.toml
dna-src/zomes/graphql/code/src/: holochain_juniper.rs  lib.rs
dna-src/zomes/graphql/code/src/anchor/: mod.rs
dna-src/zomes/graphql/code/src/identity/: mod.rs
dna-src/zomes/graphql/code/src/schema/: comment.rs  community.rs  me.rs  message.rs  message_thread.rs  mod.rs  person.rs  post.rs
dna-src/zomes/identity/: zome.json
dna-src/zomes/identity/code/: .hcbuild  Cargo.toml
dna-src/zomes/identity/code/src/: lib.rs
dna-src/zomes/identity/code/src/identity/: mod.rs
dna-src/zomes/messages/code/: .hcbuild  Cargo.toml
dna-src/zomes/messages/code/src/: lib.rs
dna-src/zomes/messages/code/src/message/: mod.rs
dna-src/zomes/messages/code/src/thread/: mod.rs
dna-src/zomes/people/: zome.json
dna-src/zomes/people/code/: .hcbuild  Cargo.toml
dna-src/zomes/people/code/src/: lib.rs
dna-src/zomes/people/code/src/anchor/: mod.rs
dna-src/zomes/people/code/src/people/: mod.rs
dna-src/zomes/posts/code/: .hcbuild  Cargo.toml
dna-src/zomes/posts/code/src/: lib.rs
dna-src/zomes/posts/code/src/post/: mod.rs
graphiql-ui/: package.json
graphiql-ui/public/: index.html
graphiql-ui/src/: App.js
hylo-ui/: asset-manifest.json  index.html
hylo-ui/static/css/: main.c0e883cd.css  main.c0e883cd.css.map
hylo-ui/static/js/: 2.9274641d.chunk.js  main.52635c8c.chunk.js  main.52635c8c.chunk.js.map  main.f07383e7.chunk.js  main.f07383e7.chunk.js.map
test/: config.js  index.js  package-lock.json  package.json
test-behavior/: behaviors.ts  config.ts  index.ts  package-lock.json  package.json
test/agent/: comments.js  communities.js  posts.js
test/multi_agent/: posts.js
test/single_agent/: communities.js  messages.js  people.js  posts.js  threads.js
ui/: package.json
ui/src/: App.js
zomes/comments/: zome.json
zomes/comments/code/: .hcbuild  Cargo.toml
zomes/comments/code/src/: lib.rs
zomes/comments/code/src/comments/: mod.rs
zomes/communities/code/: .hcbuild  Cargo.toml
zomes/communities/code/src/: lib.rs
zomes/communities/code/src/communities/: mod.rs
zomes/messages/code/: .hcbuild  Cargo.toml
zomes/messages/code/src/: lib.rs
zomes/messages/code/src/message/: mod.rs
zomes/messages/code/src/thread/: mod.rs
zomes/people/code/: .hcbuild  Cargo.toml
zomes/people/code/src/: lib.rs
zomes/people/code/src/anchor/: mod.rs
zomes/people/code/src/people/: mod.rs
zomes/posts/: zome.json
zomes/posts/code/: .hcbuild  Cargo.toml
zomes/posts/code/src/: lib.rs
zomes/posts/code/src/post/: mod.rs
