[package]
name = "communities_comments"
version = "0.0.3"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.104"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.104"
hdk = { git = "https://github.com/holochain/holochain-rust", branch = "fix-time-pagination" }
# hdk = { path="../../../../holochain-rust" }
holochain_json_derive = "=0.0.23"
hdk-helpers = { path="../../../common/hdk-helpers" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
