[package]
name = "communities_communities"
version = "0.0.3"
authors = ["Philip Beadle <philip.beadle@live.com.au>"]
edition = "2018"

[dependencies]
serde = "=1.0.100"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.100"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.43-alpha3" }
holochain_json_derive = "=0.0.20"
hdk-helpers = { path="../../../common/hdk-helpers" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
