[package]
name = "communities_communities"
version = "0.0.3"
authors = ["Philip Beadle <philip.beadle@live.com.au>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
hdk = "=0.0.48-alpha1"
holochain_json_derive = "0.0"
hdk-helpers = { path="../../../common/hdk-helpers" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
