[package]
name = "communities_messages"
version = "0.0.3"
authors = ["willem <willemolding@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.100"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.100"
derive_more = "0.9.0"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.43-alpha3" }
holochain_json_derive = "=0.0.20"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
