[package]
name = "communities_messages"
version = "0.0.3"
authors = ["willem <willemolding@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
derive_more = "0.9.0"
hdk = "=0.0.48-alpha1"
holochain_json_derive = "0.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
