[package]
name = "communities_people"
version = "0.1.0"
authors = ["Robbie Carlton <robbie.carlton@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.100"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.100"
derive_more = "0.9.0"
log = "0.4.6"
env_logger = "0.6.1"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.43-alpha3" }
holochain_json_derive = "=0.0.20"
hdk-helpers = { path="../../../common/hdk-helpers" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
