[package]
name = "communities_posts"
version = "0.0.3"
authors = ["willem <willemolding@gmail.com>"]
edition = "2018"

[dependencies]
# serde = "=1.0.89"
# serde_json = { version = "=1.0.39", features = ["preserve_order"] }
# serde_derive = "=1.0.89"
serde = "=1.0.100"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.100"
boolinator = "=2.4.0"
derive_more = "0.9.0"
# hdk = { path = "../../../holochain-rust/crates/hdk" }
# holochain_json_derive = "=0.0.17"
hdk = { version = "0.0.43-alpha3" }
holochain_json_derive = "=0.0.20"
hdk-helpers = { path="../../../common/hdk-helpers" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
