[package]
name = "communities_posts"
version = "0.0.3"
authors = ["willem <willemolding@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
boolinator = "=2.4.0"
derive_more = "0.9.0"
hdk = "=0.0.48-alpha1"
holochain_json_derive = "0.0"
hdk-helpers = { path="../../../common/hdk-helpers" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
