[package]
name = "hylo_messenger"
version = "0.1.0"
authors = ["willem <willemolding@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
juniper = "0.11.1"
derive_more = "0.9.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.9-alpha" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.9-alpha" }
holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.9-alpha" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
