[package]
name = "hylo_graphql"
version = "0.0.3"
authors = ["willem <willemolding@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
boolinator = "=2.4.0"
juniper = "0.11.1"
derive_more = "0.9.0"
cached = "0.8.0"
itertools = "0.8.0"
hdk = { path = "../../../../holochain-rust/hdk-rust" }
holochain_json_derive = "=0.0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
