[package]
name = "hylo_people"
version = "0.1.0"
authors = ["Robbie Carlton <robbie.carlton@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
derive_more = "0.9.0"
log = "0.4.6"
env_logger = "0.6.1"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.28-alpha1" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.28-alpha1" }
holochain_json_derive = "=0.0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
